--- a/public/base.css
+++ b/public/base.css
@@ -6,6 +6,11 @@
 :root {
     --page-bg: #1b1310;
     --text-col: #e2e2e2;
+    --input-bg: rgb(37, 37, 37);
+    --input-border: rgb(95, 95, 95);
+    --input-color: white;
+
+    --button-pressed-bg: rgb(30, 30, 30);
 }
 
 body {
@@ -13,4 +18,23 @@ body {
     color: var(--text-col);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 1em;
+}
+
+input, select, button {
+    font-family: inherit;
+    font-size: inherit;
+    padding: 0.1em 0.2em;
+    border: solid var(--input-border) 1px;
+    background-color: var(--input-bg);
+    color: var(--input-color);
+    border-radius: 0.4em;
+}
+
+button {
+    padding: 0.2em 0.4em;
+    cursor: pointer;
+
+    &:active {
+        background-color: var(--button-pressed-bg);
+    }
 }
