--- a/public/index.css
+++ b/public/index.css
@@ -1,23 +1,38 @@
 body {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 2em;
-    align-items: center;
+    place-items: center;
+
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "header header header"
+        ". main side"
+}
+
+header {
+    grid-area: header;
+}
+
+main {
+    grid-area: main;
+}
+
+aside {
+    grid-area: side;
 }
 
 #chessboard {
     --light-tile: #f1de9d;
     --dark-tile: #614725;
-    --tile-size: min(10vh, 10vw, 5em);
 
     .board {
         display: grid;
-        grid-template-columns: repeat(8, var(--tile-size));
-        grid-template-rows: repeat(8, var(--tile-size));
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat(8, auto);
     
         .tile {
-            width: var(--tile-size);
-            height: var(--tile-size);
+            width: 100%;
             background-color: var(--dark-tile);
             aspect-ratio: 1;
             display: grid;
@@ -48,8 +63,9 @@ body {
     }
 
     #dragged {
-        width: var(--tile-size);
-        height: var(--tile-size);
+        --size: 32px;
+        width: var(--size);
+        height: var(--size);
         aspect-ratio: 1;
         object-fit: contain;
         margin: auto;
@@ -67,4 +83,22 @@ body {
             display: none;
         }
     }
+}
+
+#sidebar {
+    padding: 0 2em;
+    border-left: solid var(--text-col) 1px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+
+}
+
+#config {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
 }
